# tinyrenderer_implementation

./: .gitignore  CMakeLists.txt  README.md  drawtools.h  imagedata.cpp  imagedata.h  main.cpp  shader.cpp  shader.h
